# acompiler

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
asm/: defines.inc
examples/: if_else  if_statement  return  variables
src/: assert.h  compiler.h  datatype.h  emitter.cpp  emitter.h  environment.h  error.h  expressions.cpp  expressions.h  main.cpp  parser.cpp  parser.h  printer.h  register.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  statements.cpp  statements.h  token.h  typechecker.h
test/: emitter.cpp  parser.cpp  resolver.cpp  scanner.cpp  token.cpp
